--- a/09-DOM.html
+++ b/09-DOM.html
@@ -4,7 +4,29 @@
     <title>DOM</title>
   </head>
   <body>
+    <button>hello</button>
+    <button class="js-button">Second buttom</button>
     <script>
+      document.querySelector('button');
+      const buttomElement = document.querySelector('js-button');
+      console.log(buttomElement);
+      /*
+      console.log(document.title)
+
+      document.title='Changed';
+
+      console.log(document.body);
+      console.log(typeof document.body);
+
+
+      console.log(document.body.innerHTML);
+      document.body.innerHTML= 'Changed';
+
+      /*
+      document.body.innerHTML = 'hello';
+      document.title = 'Good job';
+      */
+
     
     </script>
   </body>
